<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="削除"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@drawable/shape_rounded_left_corners"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:id="@+id/deletebutton" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:focusableInTouchMode="false"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_drag_handle_24"
            android:id="@+id/rearrangebutton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="TextView"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:textColor="@color/black"
                    android:text="0"
                    android:gravity="center_vertical|right"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/vol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="巻"
                    android:gravity="center_vertical|right"
                    android:textSize="16dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="author" >
                </TextView>

                <TextView
                    android:id="@+id/memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="memo" >
                </TextView>

                <TextView
                    android:id="@+id/inputdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000/00/00" >
                </TextView>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:background="@drawable/original_button"
            android:focusableInTouchMode="false"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:text="╋" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
