...
            android:text="タイトル名"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
...
            android:text="　　　巻数"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editNumber"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="3" />
    </LinearLayout>

    <LinearLayout
...
