<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sirahanairo"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainView"
        android:orientation="vertical"
        android:layout_above="@+id/adViewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/itemtabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appcolor"
            style="@style/ComicTabStyle" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/adViewFrame"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_new_edit"
        android:importantForAccessibility="no" />

    <FrameLayout
        android:id="@+id/adViewFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>